做到读取全部图文了
Signed-off-by: Meathill <meathill@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "mustache/mustache": "~2.5"
+    },
     "autoload": {
         "psr-4": {
             "MasterMeat\\": "src"
