--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:js": "webpack",
-    "watch:stylus": "stylus -w styl/screen.styl -o css/ --sourcemap"
+    "watch:stylus": "mkdir css & stylus -w styl/screen.styl -o css/ --sourcemap"
   },
   "repository": {
     "type": "git",
@@ -20,19 +20,20 @@
   },
   "homepage": "https://github.com/meathill/wp-plugin-weixin#readme",
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-env": "^1.2.2",
-    "bootstrap": "^4.0.0-alpha.6",
-    "css-loader": "^0.27.3",
-    "element-ui": "^1.2.5",
+    "babel-preset-env": "^1.6.0",
+    "bootstrap": "^4.0.0-beta",
+    "css-loader": "^0.28.7",
+    "element-ui": "^1.4.3",
+    "eslint-config-google": "^0.9.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
-    "vue": "^2.2.4",
-    "vue-loader": "^11.2.0",
-    "vue-resource": "^1.2.1",
-    "vue-template-compiler": "^2.2.4",
-    "webpack": "^2.2.1"
+    "vue": "^2.4.2",
+    "vue-loader": "^13.0.4",
+    "vue-resource": "^1.3.4",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.5.5"
   }
 }
