--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "bootstrap": "^4.0.0-beta",
     "css-loader": "^0.28.7",
@@ -35,5 +36,9 @@
     "vue-resource": "^1.3.4",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^3.5.5"
+  },
+  "dependencies": {
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0"
   }
 }
