--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "bootstrap": "^4.0.0-beta",
+    "babel-preset-env": "^1.6.1",
+    "bootstrap": "^4.0.0-beta.2",
     "css-loader": "^0.28.7",
-    "element-ui": "^1.4.3",
+    "element-ui": "^2.0.8",
     "eslint-config-google": "^0.9.1",
     "font-awesome": "^4.7.0",
-    "moment": "^2.18.1",
-    "vue": "^2.4.2",
-    "vue-loader": "^13.0.4",
+    "moment": "^2.19.4",
+    "vue-loader": "^13.5.0",
     "vue-resource": "^1.3.4",
-    "vue-template-compiler": "^2.4.2",
-    "webpack": "^3.5.5"
+    "vue-template-compiler": "^2.5.9",
+    "webpack": "^3.10.0"
   },
   "dependencies": {
-    "vue-router": "^2.7.0",
-    "vuex": "^2.4.0"
+    "vue": "^2.5.9",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   }
 }
