--- a/package.json
+++ b/package.json
@@ -20,24 +20,24 @@
   },
   "homepage": "https://github.com/meathill/wp-plugin-weixin#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "bootstrap": "^4.0.0-beta.2",
-    "css-loader": "^0.28.7",
-    "element-ui": "^2.0.8",
+    "babel-preset-env": "^1.7.0",
+    "bootstrap": "^4.1.3",
+    "css-loader": "^0.28.11",
+    "element-ui": "^2.4.7",
     "eslint-config-google": "^0.9.1",
-    "font-awesome": "^4.7.0",
-    "moment": "^2.19.4",
-    "vue-loader": "^13.5.0",
-    "vue-resource": "^1.3.4",
-    "vue-template-compiler": "^2.5.9",
-    "webpack": "^3.10.0"
+    "font-awesome": "^5.3.0",
+    "moment": "^2.22.2",
+    "vue-loader": "^13.7.3",
+    "vue-resource": "^1.5.1",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^3.12.0"
   },
   "dependencies": {
-    "vue": "^2.5.9",
+    "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   }
