--- a/package.json
+++ b/package.json
@@ -20,25 +20,22 @@
   },
   "homepage": "https://github.com/meathill/wp-plugin-weixin#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
     "bootstrap": "^4.3.1",
-    "css-loader": "^0.28.11",
-    "element-ui": "^2.5.4",
+    "css-loader": "^2.1.1",
     "eslint-config-google": "^0.9.1",
-    "font-awesome": "^5.3.0",
     "moment": "^2.24.0",
-    "vue-loader": "^13.7.3",
-    "vue-resource": "^1.5.1",
-    "vue-template-compiler": "^2.6.7",
-    "webpack": "^3.12.0"
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "vue": "^2.6.7",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.1.0"
+    "element-ui": "^2.9.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   }
 }
